kubernetes-legacy/apps/gaia/volsync-system/kopia/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kopia-route
  annotations:
    external-dns-managed: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: wildcard-domain-https
  hostnames:
    - "kopia.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: kopia
          port: 8080
